--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>PlantPlaces.com</title>
 </head>
 <body>
 	<h1>Welcome to PlantPlaces</h1>
+	<br/>
+	<p th:txt = "${specimenDTO}"/>
 </body>
 </html>
