--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -7,6 +7,6 @@
 <body>
 	<h1>Welcome to PlantPlaces</h1>
 	<br/>
-	<p th:txt = "${specimenDTO}"/>
+	<p th:text = "${specimenDTO}"/>
 </body>
 </html>
